kinda fixed the white stuff on mobile. I just set .fixed to display none. Sub optimal, but it doesn't really make a difference

--- a/wp-content/themes/bridgetownbass/style.scss
+++ b/wp-content/themes/bridgetownbass/style.scss
@@ -61,7 +61,8 @@ html {
 	padding:0;
 }
 body {
-	background:#000000 url('images/BGBG2_4.gif');
+	background-color:#000000;
+	background-image:url("images/BGBG2_4.gif");
 	color:$blue;
 	font:16px 'Anton', Impact, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
 	margin:0;
@@ -463,6 +464,10 @@ h1._404 {
 	header, section, footer {
 		width: $widthSmall;
 	}
+	.fixed {
+		display:none;
+	}
+	
 //	header {
 //		font-size:16px;
 //		h1 {
